--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,217 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
-
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
-
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
-  }
-}
-
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-}
-
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 html,
 body {
-  max-width: 100vw;
-  overflow-x: hidden;
+  padding: 0;
+  margin: 0;
+  font-family: "Poppins", sans-serif;
+}
+* {
+  box-sizing: border-box;
+}
+.container {
+  width: 1200px;
+  margin: 0px auto;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.col-6 {
+  width: 50%;
+}
+.banner-div-top {
+  background-image: linear-gradient(
+    to bottom,
+    #000 36.5%,
+    rgba(255, 255, 255, 0) 100%
+  );
+}
+.banner-div-top-inside {
+  padding-top: 150px;
+  color: #fff;
+}
+.banner-div-top-inside a {
+  text-decoration: none;
+  color: #fff;
+  padding: 8px 30px;
+  font-size: 18px;
+  font-weight: 600;
+  border-radius: 15px;
+  border: 1px solid #fff;
+  background-image: linear-gradient(#fff, #fff);
+  background-size: 0 100%;
+  background-repeat: no-repeat;
+  position: relative;
+  top: 18px;
+  cursor: pointer;
+  transition: 0.4s;
+  box-shadow: 0px 0px 7px #dddddd57;
+}
+.banner-div-top-inside a:hover {
+  background-size: 100% 100%;
+  color: #000000;
+}
+.banner-div-top-inside h1 {
+  font-size: 39px;
+  font-weight: 700;
+}
+.banner-div-top-inside p {
+  font-size: 18px;
+  font-weight: 300;
+}
+#crypto-payment-mobile {
+  width: 100%;
+  height: auto;
+}
+.polygon-blockchain-div {
+  background-image: radial-gradient(
+    farthest-corner at 1128px 231px,
+    #c598eb 15%,
+    rgba(255, 255, 255, 0) 5%
+  );
+}
+.polygon-blockchain-content-out {
+  display: flex;
+  align-items: center;
+}
+.polygon-blockchain-content h2 {
+  font-size: 38px;
+  font-weight: 700;
+}
+.polygon-blockchain-content p {
+  font-size: 18px;
+  font-weight: 400;
+}
+#polygon-matic-badge {
+  width: 70%;
+  height: auto;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+/* ============= Nav Design start ======================== */
+.nav-panel {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
 }
+.nav-panel ul {
+  display: flex;
+  align-items: center;
+  gap: 20px;
+}
+.nav-panel ul li {
+  list-style: none;
+  display: flex;
+  align-items: center;
+}
+.nav-panel ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 16px;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+}
+/* ============= Nav Design end ======================== */
 
-a {
-  color: inherit;
+/* footer start */
+.footer {
+  background-color: #000;
+  border-top-left-radius: 15px;
+  border-top-right-radius: 15px;
+}
+.footer-out {
+  padding: 30px 0px;
+}
+.footer-top {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  color: #fff;
+}
+.footer-top h4 {
+  margin: 0;
+}
+.footer-first-content {
+  display: flex;
+  flex-wrap: wrap;
+  margin-top: 30px;
+}
+.footer-first-content img {
+  margin-left: 10px;
+  border: 0.5px solid #858585;
+  border-radius: 10px;
+  height: 100px;
+  width: auto;
+}
+.footer-link {
+  margin-top: 30px;
+}
+#footer-link-bottom {
+  padding-top: 20px;
+}
+.footer-link a {
+  display: block;
+  color: #fff;
   text-decoration: none;
 }
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
+.footer-inform-content h4 {
+  width: 270px;
 }
+.subscribing-input {
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  padding: 0px 10px;
+  font-weight: 600;
+  border: 1px solid #000;
+}
+.subscribing-input:focus {
+  outline: 0;
+}
+.subscribing-btn {
+  border: 1px solid #fff;
+  background-color: #000;
+  color: #fff;
+  padding: 12px 28px;
+  margin-top: 12px;
+  border-radius: 15px;
+  font-weight: 500;
+  font-size: 15px;
+  transition: 0.4s ease;
+}
+.subscribing-btn:hover {
+  border: 1px solid #000;
+  background-color: #fff;
+  color: #000;
+}
+.footer-mid {
+  text-align: right;
+  margin-top: 30px;
+  border-bottom: 1px solid #fff;
+}
+.footer-mid a {
+  margin-left: 20px;
+  margin-right: 10px;
+  font-size: 15px;
+  font-weight: 500;
+  color: #fff;
+  text-decoration: none;
+}
+.footer-bottom {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-top: 15px;
+  padding-bottom: 100px;
+}
+.footer-bottom label {
+  color: #fff;
+}
+.icon-footer a {
+  margin: 0px 3px;
+  color: #fff;
+}
+/* footer end */
