--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,10 +16,14 @@ body {
   width: 1200px;
   margin: 0px auto;
 }
+.dashboard-main-container {
+  display: flex;
+}
 .main-container {
   overflow-y: auto;
   margin-left: 300px;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
 }
 .row {
   display: flex;
@@ -178,7 +182,6 @@ body {
 .transaction div {
   width: 20%;
 }
-
 .home-how-it-work {
   text-align: -webkit-center;
 }
@@ -236,15 +239,19 @@ body {
 }
 .dashboard-home-card1 {
   background-color: #fff;
-  box-shadow: 0px 0px 31px rgb(0 0 0 / 12%);
+  box-shadow: 0px 0px 30px #dddddd75;
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   gap: 20px;
   padding: 10px;
+  width: 18%;
+  border-radius: 15px;
 }
 .dashboard-home-card1-inside .dashboard-home-card1-button {
   display: flex;
   gap: 10px;
+  margin: 5px 0px;
 }
 .dashboard-home-card1-inside .dashboard-home-card1-button button {
   background-color: #000;
@@ -263,5 +270,41 @@ body {
 .dashboard-home {
   display: flex;
   flex-wrap: wrap;
-  margin-top: 25px;
+  margin: 25px auto;
+  justify-content: space-between;
+}
+.dashboard-home-card1-list-container {
+  width: 100%;
+}
+.dashboard-home-card1-inside p {
+  font-size: 10px;
+}
+.dashboard-home-card1-list {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 8px 25px;
+}
+.dashboard-home-card1-list.odd {
+  background-color: #ebeaea;
+}
+.dashboard-home-card1-list.even {
+  background-color: #f4f4f4;
+}
+.dashboard-home-card1-list.odd.first {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+.dashboard-home-card1-list.odd.last {
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+}
+.dashboard-home-card1-list p {
+  font-size: 14px;
+}
+.dashboard-home-card2 {
+  background-color: #fff;
+  padding: 20px;
+  box-shadow: 0px 0px 30px #dddddd75;
+  border-radius: 15px;
 }
