--- a/src/styles/sidebar.css
+++ b/src/styles/sidebar.css
@@ -1,5 +1,5 @@
 .side-bar {
-  background-color: #f2f2f2;
+  background-color: #fff;
   border-top-right-radius: 7px;
   border-bottom-right-radius: 7px;
   height: 100vh;
@@ -13,7 +13,7 @@
   padding-top: 25px;
   width: 100%;
 }
-.swop-logo {
+.swop-pay-logo {
   padding-left: 65px;
 }
 #active-menu a {
